# rugby_prediction

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_baseline_model_creation.ipynb  02_first_model.ipynb  03_model_improvements.ipynb  testing_functions.ipynb
rugby_prediction/: constants.py  data.py  feature_engineering.py  main.py  preprocess.py  preprocessing.py
tests/: test_preprocess.py  test_preprocessing.py
tests/test_data/: test_match_data.csv  test_output.csv
