[tool.poetry]
name = "rugby_prediction"
version = "0.1.0"
description = ""
authors = ["jme-taylor <jamiecharlestaylor94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.1"
matplotlib = "^3.6.1"
numpy = "^1.23.4"
scikit-learn = "^1.1.2"
xgboost = "^1.7.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
jupyterlab = "^3.4.8"
pytest = "^7.1.3"
mypy = "^0.982"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
